--- a/pages/destinations.html
+++ b/pages/destinations.html
@@ -142,7 +142,7 @@
             <div class="gallery-details">
                 <div class="gallary-header text-center">
                     <h2>
-                        Top Destinations
+                        All Tourist Spots
                     </h2>
                     <p>
                         Here are some of our top destinations. Pick your favorite one!
@@ -260,12 +260,13 @@
                             <div class="single-footer-txt">
                                 <p><a href="../index.html">home</a></p>
                                 <p><a href="./about-us.html">about us</a></p>
-                                <p><a href="#">destination</a></p>
-                                <p><a href="#">spacial packages</a></p>
-                                <p><a href="#">special offers</a></p>
-                                <p><a href="#">blog</a></p>
+                                <p><a href="./all-tourist-spots.html">tourist spots</a></p>
+                                <p><a href="./all-photos.html">gallery</a></p>
                                 <p><a href="./contact_us.html">contact us</a></p>
-                                <p><a href="#">FAQ</a></p>
+                                <p><a href="./faq.html">FAQ</a></p>
+                                <p><a href="./all-notices.html">Notices</a></p>
+                                <p><a href="./my-account.html">My Account</a></p>
+                                <p><a href="./policies.html">Policies</a></p>
                             </div><!--/.single-footer-txt-->
                         </div><!--/.single-footer-item-->
 
@@ -273,13 +274,13 @@
 
                     <div class="col-sm-3">
                         <div class="single-footer-item">
-                            <h2>popular destination</h2>
+                            <h2>Our Tourist Spots</h2>
                             <div class="single-footer-txt">
-                                <p><a href="./sajek_details.html">Sajek</a></p>
-                                <p><a href="#">Bandarban</a></p>
-                                <p><a href="#">Rangamati</a></p>
-                                <p><a href="#">Cox's Bazar</a></p>
-                                <p><a href="#">Saintmartin</a></p>
+                                <p><a href="./sajek_details.html">Nilgiri Army Resort</a></p>
+                                <p><a href="./sajek_details.html">Bandarban</a></p>
+                                <p><a href="./sajek_details.html">Rangamati</a></p>
+                                <p><a href="./sajek_details.html">Cox's Bazar</a></p>
+                                <p><a href="./sajek_details.html">Saintmartin</a></p>
                             </div><!--/.single-footer-txt-->
                         </div><!--/.single-footer-item-->
                     </div><!--/.col-->
