--- a/pages/all-facilities.html
+++ b/pages/all-facilities.html
@@ -85,12 +85,12 @@
                         </div><!-- /.navbar-header-->
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="../index.html">home</a></li>
-                                <li><a href="./all-tourist-spots.html">Tourist Spots</a></li>
-                                <li><a href="nilgiri-gallery.html">gallery</a></li>
-                                <li><a href="./about-us.html">about us</a></li>
-                                <li><a href="./contact_us.html">contact</a></li>
-                                <li><a href="./faq.html">faq</a></li>
+                                <!--                                <li><a href="./destinations.html">Tourist Spots</a></li>-->
+                                <li><a href="./getting-here.html">Getting Here</a></li>
+                                <li><a href="./local-specialities.html">Local Markets</a></li>
+                                <li><a href="./emergency-contact.html">Emergency contact</a></li>
+                                <!--                                <li><a href="./all-reviews.html">Reviews</a></li>-->
+                                <li><a href="nilgiri-gallery.html">Gallery</a></li>
                                 <li><a href="./my-account.html">My Account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
@@ -108,161 +108,12 @@
 <div id="breadcrumbID" class="container" style="margin-top: 60px">
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
-        <li class="active">faq</li>
+        <li><a href="./all-tourist-spots.html">All our tourist spots</a></li>
+        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
+        <li class="active">All facilities</li>
     </ol>
 </div>
 <!-- breadcrumbs ends -->
-
-<!--faq starts-->
-<div class="panel-group container" id="accordion" style="margin-top: 20px">
-    <h2 class="text-center" style="padding: 10px"> Frequently asked questions</h2>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                    Do we provide refund policy?</a>
-            </h4>
-        </div>
-        <div id="collapse1" class="panel-collapse collapse in">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-            </div>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                    What are our main services?</a>
-            </h4>
-        </div>
-        <div id="collapse2" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                    What payment method we use?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">We accept credit and debit cards of all banks. Credit cards currently accepted include Visa and Mastercard</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                    What is our purpose?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse4" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                    What makes us unique?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse5" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                    What we provide?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse6" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-                    What are the frequentrly visited spots?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse7" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">
-                    Why should you use this site?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse8" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-</div>
-<!--faq ends-->
 
 <!-- footer-copyright start -->
 <footer  class="footer-copyright">
@@ -347,6 +198,88 @@
 </footer><!-- /.footer-copyright-->
 <!-- footer-copyright end -->
 
+<!-- footer-copyright start -->
+<footer  class="footer-copyright">
+    <div class="container">
+        <div class="footer-content">
+            <div class="row">
+
+                <div class="col-sm-3">
+                    <div class="single-footer-item">
+                        <div class="footer-logo">
+                            <a href="../index.html">
+                                E<span>-Tourism</span>
+                            </a>
+                            <p>
+                                best travel agency
+                            </p>
+                        </div>
+                    </div><!--/.single-footer-item-->
+                </div><!--/.col-->
+
+                <div class="col-sm-3">
+                    <div class="single-footer-item">
+                        <h2>link</h2>
+                        <div class="single-footer-txt">
+                            <p><a href="../index.html">home</a></p>
+                            <p><a href="./about-us.html">about us</a></p>
+                            <p><a href="#">destination</a></p>
+                            <p><a href="#">spacial packages</a></p>
+                            <p><a href="#">special offers</a></p>
+                            <p><a href="#">blog</a></p>
+                            <p><a href="./contact_us.html">contact us</a></p>
+                            <p><a href="#">FAQ</a></p>
+                        </div><!--/.single-footer-txt-->
+                    </div><!--/.single-footer-item-->
+
+                </div><!--/.col-->
+
+                <div class="col-sm-3">
+                    <div class="single-footer-item">
+                        <h2>popular destination</h2>
+                        <div class="single-footer-txt">
+                            <p><a href="./sajek_details.html">Sajek</a></p>
+                            <p><a href="#">Bandarban</a></p>
+                            <p><a href="#">Rangamati</a></p>
+                            <p><a href="#">Cox's Bazar</a></p>
+                            <p><a href="#">Saintmartin</a></p>
+                        </div><!--/.single-footer-txt-->
+                    </div><!--/.single-footer-item-->
+                </div><!--/.col-->
+
+                <div class="col-sm-3">
+                    <div class="single-footer-item text-center">
+                        <h2 class="text-left">contacts</h2>
+                        <div class="single-footer-txt text-left">
+                            <p>+880 1521201537</p>
+                            <p class="foot-email"><a href="#">faisal@gmail.com</a></p>
+                            <p>Military Institute of Science & Technology</p>
+                            <p>Dhaka, Bangladesh</p>
+                        </div><!--/.single-footer-txt-->
+                    </div><!--/.single-footer-item-->
+                </div><!--/.col-->
+
+            </div><!--/.row-->
+
+        </div><!--/.footer-content-->
+        <hr>
+        <div class="foot-icons ">
+            <ul class="footer-social-links list-inline list-unstyled">
+                <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li>
+            </ul>
+            <p>&copy; 2022 <a href="#">E-Tourism BD</a>. All Right Reserved</p>
+
+        </div><!--/.foot-icons-->
+        <div id="scroll-Top">
+            <i class="fa fa-angle-double-up return-to-top" id="scroll-top" data-toggle="tooltip" data-placement="top" title="" data-original-title="Back to Top" aria-hidden="true"></i>
+        </div><!--/.scroll-Top-->
+    </div><!-- /.container-->
+
+</footer><!-- /.footer-copyright-->
+<!-- footer-copyright end -->
+
 <script src="../assets/js/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 
@@ -381,6 +314,21 @@
 
 <!--Custom JS-->
 <script src="../assets/js/custom.js"></script>
+
+<!-- sweat alert -->
+<script src="../assets/js/sweatalert.min.js"></script>
+
+<script>
+    function book(){
+        Swal.fire({
+            position: 'center',
+            icon: 'success',
+            title: 'Booking done',
+            showConfirmButton: false,
+            timer: 2500
+        })
+    }
+</script>
 
 </body>
 </html>
