--- a/pages/emergency-contact.html
+++ b/pages/emergency-contact.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
 
     <!-- TITLE OF SITE -->
-    <title>Travel</title>
+    <title>Emergency Contact</title>
 
     <!-- favicon img -->
     <link rel="shortcut icon" type="image/icon" href="../assets/logo/favicon.png"/>
@@ -46,7 +46,7 @@
 
     <!--style.css-->
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <link rel="stylesheet" href="../assets/css/contact_us.css" />
+    <link rel="stylesheet" href="../assets/css/emergency-contact.css" />
 
     <!--responsive.css-->
     <link rel="stylesheet" href="../assets/css/responsive.css" />
@@ -91,7 +91,7 @@
                                 <li><a href="./about-us.html">about us</a></li>
                                 <li><a href="./contact_us.html">contact</a></li>
                                 <li><a href="./faq.html">faq</a></li>
-                                <li><a href="./my-account.html">My Account</a></li>
+                                <li><a href="./my-account.html">My account</a></li>
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </div><!-- /.main-menu-->
@@ -108,161 +108,49 @@
 <div id="breadcrumbID" class="container" style="margin-top: 60px">
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
-        <li class="active">faq</li>
+        <li><a href="./all-tourist-spots.html">Our all tourist spots</a></li>
+        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
+        <li class="active">Emergency local contact</li>
     </ol>
 </div>
 <!-- breadcrumbs ends -->
 
-<!--faq starts-->
-<div class="panel-group container" id="accordion" style="margin-top: 20px">
-    <h2 class="text-center" style="padding: 10px"> Frequently asked questions</h2>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                    Do we provide refund policy?</a>
-            </h4>
-        </div>
-        <div id="collapse1" class="panel-collapse collapse in">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-            </div>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                    What are our main services?</a>
-            </h4>
-        </div>
-        <div id="collapse2" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                    What payment method we use?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse3" class="panel-collapse collapse">
-            <div class="panel-body">We accept credit and debit cards of all banks. Credit cards currently accepted include Visa and Mastercard</div>
-        </div>
+<!-- emergency contact starts-->
+<div class="container" id="accordion" style="margin-top: 20px">
+    <div class="local-guidance">
+        <h3 class="text-center" style="padding: 10px; color: grey"> Local Guidance of Nilgiri Army Resort</h3>
+        <hr>
+        <p><strong>Name:</strong> Faisal Ibn Aziz</p>
+        <p><strong>Mobile:</strong> 01521201537</p>
+        <p><strong>Address: </strong> asdkdas,hasjhdijjasd,sadjjidjias</p>
     </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                    What is our purpose?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse4" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
+    <div class="local-guidance">
+        <h3 class="text-center" style="padding: 10px; color: grey"> Emergency Contact of Nilgiri Army Resort</h3>
+        <hr>
+        <p><strong>Name:</strong> Faisal Ibn Aziz</p>
+        <p><strong>Mobile:</strong> 01521201537</p>
+        <p><strong>Address: </strong> nilgiri army resort</p>
     </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                    What makes us unique?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse5" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
+    <div class="local-guidance">
+        <h3 class="text-center" style="padding: 10px; color: grey"> Local Information of Nilgiri Army Resort</h3>
+        <hr>
+        <p><strong>Local Thana:</strong> Nirgiri Police station</p>
+        <p><strong>Local Thana Mobile Number:</strong> 01521201537</p>
+        <p><strong>Local Hospital: </strong> Nilgiri Healthcare Center</p>
+        <p><strong>Local Hospital Mobile Number: </strong> 01723569458</p>
     </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                    What we provide?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse6" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-                    What are the frequentrly visited spots?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse7" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
-    </div>
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="panel-title">
-                <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">
-                    Why should you use this site?
-                </a>
-            </h4>
-        </div>
-        <div id="collapse8" class="panel-collapse collapse">
-            <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.</div>
-        </div>
+    <div class="local-guidance">
+        <h3 class="text-center" style="padding: 10px; color: grey"> Location </h3>
+        <hr>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3649.4620796078343!2d90.35570301569429!3d23.83772008454638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1410136a4dd%3A0x7a2bb9d68ea2166e!2sMilitary%20Institute%20of%20Science%20and%20Technology%20(MIST)!5e0!3m2!1sen!2sbd!4v1642523147655!5m2!1sen!2sbd"
+                style="border:0; width: 100%; height: 500px" allowfullscreen="" loading="lazy">
+        </iframe>
     </div>
 </div>
-<!--faq ends-->
+<!--emergency contact ends-->
 
 <!-- footer-copyright start -->
 <footer  class="footer-copyright">
@@ -352,6 +240,7 @@
 
 <!--modernizr.min.js-->
 <script src="../assets/js/modernizer.min.js"></script>
+
 
 <!--bootstrap.min.js-->
 <script  src="../assets/js/bootstrap.min.js"></script>
