--- a/pages/payment.html
+++ b/pages/payment.html
@@ -1,20 +1,11 @@
 <!doctype html>
-<html class="no-js"  lang="en">
-
+<html lang="en">
 <head>
-    <!-- META DATA -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!--font-family-->
-    <link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet" />
-
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-
-    <!-- TITLE OF SITE -->
-    <title>Travel</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Payment</title>
 
     <!-- favicon img -->
     <link rel="shortcut icon" type="image/icon" href="../assets/logo/favicon.png"/>
@@ -46,7 +37,6 @@
 
     <!--style.css-->
     <link rel="stylesheet" href="../assets/css/style.css" />
-    <link rel="stylesheet" href="../assets/css/contact_us.css" />
 
     <!--responsive.css-->
     <link rel="stylesheet" href="../assets/css/responsive.css" />
@@ -59,6 +49,23 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+        .inlineimage {
+            max-width: 470px;
+            margin-right: 8px;
+            margin-left: 10px
+        }
+
+        .images {
+            display: inline-block;
+            max-width: 98%;
+            height: auto;
+            width: 22%;
+            margin: 1%;
+            left: 20px;
+            text-align: center
+        }
+    </style>
 </head>
 <body>
 
@@ -108,50 +115,64 @@
 <div id="breadcrumbID" class="container" style="margin-top: 60px">
     <ol class="breadcrumb">
         <li><a href="../index.html">Home</a></li>
-        <li class="active">Contact Us</li>
+        <li><a href="./all-tourist-spots.html">Our all tourist spots</a></li>
+        <li><a href="./sajek_details.html">Nilgiri Army Resort</a></li>
+        <li><a href="./all-events.html">Events</a></li>
+        <li class="active">Book</li>
     </ol>
 </div>
 <!-- breadcrumbs ends -->
 
-<!--contact us starts -->
-<div class="container contact-form">
-    <div class="contact-image">
-        <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
-    </div>
-    <form method="post">
-        <h3>Drop Us a Message</h3>
+<!--payment starts -->
+<div class="container" >
+    <div class="page-header text-center">
+        <h1>Payment Gateway</h1>
+    </div> <!-- Credit Card Payment Form - START -->
+    <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <input type="text" name="txtName" class="form-control" placeholder="Your Name *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="text" name="txtEmail" class="form-control" placeholder="Your Email *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="text" name="txtPhone" class="form-control" placeholder="Your Phone Number *" value="" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <textarea name="txtMsg" class="form-control" placeholder="Your Message *" style="width: 100%; height: 150px;"></textarea>
+            <div class="col-xs-12 col-md-6 col-md-offset-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <h3 class="text-center">Payment Details</h3>
+                            <div class="inlineimage"> <img class="img-responsive images" src="https://cdn0.iconfinder.com/data/icons/credit-card-debit-card-payment-PNG/128/Mastercard-Curved.png"> <img class="img-responsive images" src="https://cdn0.iconfinder.com/data/icons/credit-card-debit-card-payment-PNG/128/Discover-Curved.png"> <img class="img-responsive images" src="https://cdn0.iconfinder.com/data/icons/credit-card-debit-card-payment-PNG/128/Paypal-Curved.png"> <img class="img-responsive images" src="https://cdn0.iconfinder.com/data/icons/credit-card-debit-card-payment-PNG/128/American-Express-Curved.png"> </div>
+                        </div>
+                    </div>
+                    <div class="panel-body">
+                        <form role="form">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="form-group"> <label>CARD NUMBER</label>
+                                        <div class="input-group"> <input type="tel" class="form-control" placeholder="Valid Card Number" /> <span class="input-group-addon"><span class="fa fa-credit-card"></span></span> </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-7 col-md-7">
+                                    <div class="form-group"> <label><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label> <input type="tel" class="form-control" placeholder="MM / YY" /> </div>
+                                </div>
+                                <div class="col-xs-5 col-md-5 pull-right">
+                                    <div class="form-group"> <label>CV CODE</label> <input type="tel" class="form-control" placeholder="CVC" /> </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="form-group"> <label>CARD OWNER</label> <input type="text" class="form-control" placeholder="Card Owner Name" /> </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="panel-footer">
+                        <div class="row">
+                            <div class="col-xs-12"> <button class="btn btn-success btn-lg btn-block" onclick="book()">Confirm Payment</button> </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </form>
+    </div>
 </div>
-<!--contact us ends-->
-
-<!--  google map location starts  -->
-<div class="container" style="margin-top: -10%">
-    <h2 style="margin-bottom: 15px; text-align: center">Head office locations</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3649.4620796078343!2d90.35570301569429!3d23.83772008454638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1410136a4dd%3A0x7a2bb9d68ea2166e!2sMilitary%20Institute%20of%20Science%20and%20Technology%20(MIST)!5e0!3m2!1sen!2sbd!4v1642523147655!5m2!1sen!2sbd"
-            style="border:0; width: 100%; height: 500px" allowfullscreen="" loading="lazy"></iframe>
-</div>
-<!--  google map location ends  -->
+<!--payment ends -->
 
 <!-- footer-copyright start -->
 <footer  class="footer-copyright">
@@ -236,40 +257,29 @@
 </footer><!-- /.footer-copyright-->
 <!-- footer-copyright end -->
 
-<script src="../assets/js/jquery.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+<!-- sweat alert -->
+<script src="../assets/js/sweatalert.min.js"></script>
 
-<!--modernizr.min.js-->
-<script src="../assets/js/modernizer.min.js"></script>
-
-<!--bootstrap.min.js-->
-<script  src="../assets/js/bootstrap.min.js"></script>
-
-<!-- bootsnav js -->
-<script src="../assets/js/bootsnav.js"></script>
-
-<!-- jquery.filterizr.min.js -->
-<script src="../assets/js/jquery.filterizr.min.js"></script>
-
-<script  src="../assets/js/jquery-easing.min.js"></script>
-<!--jquery-ui.min.js-->
-<script src="../assets/js/jquery-ui.min.js"></script>
-
-<!-- counter js -->
-<script src="../assets/js/jquery.counterup.min.js"></script>
-<script src="../assets/js/waypoints.min.js"></script>
-
-<!--owl.carousel.js-->
-<script  src="../assets/js/owl.carousel.min.js"></script>
-
-<!-- jquery.sticky.js -->
-<script src="../assets/js/jquery.sticky.js"></script>
-
-<!--datepicker.js-->
-<script  src="../assets/js/datepicker.js"></script>
-
-<!--Custom JS-->
-<script src="../assets/js/custom.js"></script>
-
+<script>
+    function book(){
+        Swal.fire({
+            title: 'Are you sure you want to proceed?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Proceed payment!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                Swal.fire(
+                    'Payment done!',
+                    'Your payment has been successful!.',
+                    'success'
+                )
+            }
+        })
+    }
+</script>
 </body>
 </html>
