--- a/test.html
+++ b/test.html
@@ -28,8 +28,8 @@
                                 <li class="smooth-menu"><a href="#blog">blog</a></li>
                                 <li class="smooth-menu"><a href="#subs">subscription</a></li>
                                 <li>
-                                    <button class="book-btn">book now
-                                    </button>
+                                    <a href="./pages/payment.html" target="_blank" style="padding:10px; background-color: #00D8D6; color: white;">Book</a>
+
                                 </li><!--/.project-btn-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
