--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/sajek.jpg" alt="img"/>
+						<img src="./assets/images/gallary/sajek.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -692,7 +692,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/bandarban.jpg" alt="img"/>
+						<img src="./assets/images/gallary/bandarban.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -701,7 +701,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/cox_bazar.jpg" alt="img"/>
+						<img src="./assets/images/gallary/cox_bazar.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -710,7 +710,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/kaptai.jpg" alt="img"/>
+						<img src="./assets/images/gallary/kaptai.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -719,7 +719,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/st_martin.jpg" alt="img"/>
+						<img src="./assets/images/gallary/st_martin.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -728,7 +728,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/kaptai.jpg" alt="img"/>
+						<img src="./assets/images/gallary/kaptai.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -737,7 +737,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/bandarban.jpg" alt="img"/>
+						<img src="./assets/images/gallary/bandarban.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -746,7 +746,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/sajek.jpg" alt="img"/>
+						<img src="./assets/images/gallary/sajek.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -755,7 +755,7 @@
 			<div class="home1-testm item">
 				<div class="home1-testm-single text-center">
 					<div class="home1-testm-img">
-						<img src="../assets/images/gallary/cox_bazar.jpg" alt="img"/>
+						<img src="./assets/images/gallary/cox_bazar.jpg" alt="img"/>
 					</div><!--/.home1-testm-img-->
 				</div><!--/.home1-testm-single-->
 
@@ -765,7 +765,7 @@
 
 		<!-- view all button starts-->
 		<div class="view-all-button" style="margin-top: 10px;">
-			<a href="pages/nilgiri-gallery.html" target="_blank">View all photos</a>
+			<a href="pages/all-photos.html" target="_blank">View all photos</a>
 		</div>
 	</div><!--/.container-->
 
