--- a/pages/all-restaurants.html
+++ b/pages/all-restaurants.html
@@ -115,6 +115,137 @@
 </div>
 <!-- breadcrumbs ends -->
 
+<!-- all restaurants starts -->
+<section id="allRestaurantsID" class="packages">
+    <div class="container">
+        <div class="gallary-header text-center">
+            <h2>
+                All Restaurants of Nilgiri Army Resort
+            </h2>
+            <p>
+                Duis aute irure dolor in  velit esse cillum dolore eu fugiat nulla.
+            </p>
+        </div><!--/.gallery-header-->
+        <div class="packages-content">
+            <div class="row">
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/res-four.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Restaurant 1 <span class="pull-right">Open</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i> Best food
+                                        </span>
+                                </p>
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  Best Service
+                                        </span>
+                                </p>
+
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  Best Food
+                                        </span>
+                                </p>
+                            </div><!--/.packages-para-->
+
+                            <div class="about-btn">
+                                <a href="./restaurant-details.html" style="padding:10px; background-color: #00D8D6; color: white;">View Details</a>
+                            </div><!--/.book-btn-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/restaurant-one.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Peda Ting Ting <span class="pull-right">Closed</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i> Best Food
+                                        </span>
+                                </p>
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  Best Service
+                                        </span>
+                                </p>
+
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  Best Food
+                                        </span>
+                                </p>
+                            </div><!--/.packages-para-->
+                            <div class="about-btn">
+                                <a href="./restaurant-details.html" style="padding:10px; background-color: #00D8D6; color: white;">View Details</a>
+                            </div><!--/.book-btn-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="single-package-item">
+                        <img src="../assets/images/gallary/restaurant-three.jpg"  style="height: 300px;width:370px" alt="package-place">
+                        <div class="single-package-item-txt">
+                            <h3>Restaurant 3 <span class="pull-right">Open</span></h3>
+                            <div class="packages-para">
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i> jfhuiaosjf
+                                        </span>
+                                </p>
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  fiwefpew
+                                        </span>
+                                </p>
+
+                                <p>
+                                        <span>
+                                            <i class="fa fa-angle-right"></i>  lkjvixcpov
+                                        </span>
+                                </p>
+                            </div><!--/.packages-para-->
+                            <div class="about-btn">
+                                <a href="./restaurant-details.html" style="padding:10px; background-color: #00D8D6; color: white;">View Details</a>
+                            </div><!--/.book-btn-->
+                        </div><!--/.single-package-item-txt-->
+                    </div><!--/.single-package-item-->
+
+                </div><!--/.col-->
+            </div><!--/.row-->
+        </div><!--/.packages-content-->
+
+        <!-- pagination starts -->
+        <div id="paginationID">
+            <nav aria-label="...">
+                <ul class="pagination pagination-lg">
+                    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                    <li><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">2 <span class="sr-only">(current)</span></a></li>
+                    <li class="active"><a href="#">3 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">4 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">5 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#">6 <span class="sr-only">(current)</span></a></li>
+                    <li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                </ul>
+            </nav>
+        </div>
+        <!-- pagination ends -->
+
+    </div><!--/.container-->
+
+</section><!--/.packages-->
+<!-- all restaurants ends -->
+
 <!-- footer-copyright start -->
 <footer  class="footer-copyright">
     <div class="container">
@@ -161,88 +292,6 @@
                             <p><a href="./sajek_details.html">Rangamati</a></p>
                             <p><a href="./sajek_details.html">Cox's Bazar</a></p>
                             <p><a href="./sajek_details.html">Saintmartin</a></p>
-                        </div><!--/.single-footer-txt-->
-                    </div><!--/.single-footer-item-->
-                </div><!--/.col-->
-
-                <div class="col-sm-3">
-                    <div class="single-footer-item text-center">
-                        <h2 class="text-left">contacts</h2>
-                        <div class="single-footer-txt text-left">
-                            <p>+880 1521201537</p>
-                            <p class="foot-email"><a href="#">faisal@gmail.com</a></p>
-                            <p>Military Institute of Science & Technology</p>
-                            <p>Dhaka, Bangladesh</p>
-                        </div><!--/.single-footer-txt-->
-                    </div><!--/.single-footer-item-->
-                </div><!--/.col-->
-
-            </div><!--/.row-->
-
-        </div><!--/.footer-content-->
-        <hr>
-        <div class="foot-icons ">
-            <ul class="footer-social-links list-inline list-unstyled">
-                <li><a href="#" target="_blank" class="foot-icon-bg-1"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#" target="_blank" class="foot-icon-bg-2"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#" target="_blank" class="foot-icon-bg-3"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-            <p>&copy; 2022 <a href="#">E-Tourism BD</a>. All Right Reserved</p>
-
-        </div><!--/.foot-icons-->
-        <div id="scroll-Top">
-            <i class="fa fa-angle-double-up return-to-top" id="scroll-top" data-toggle="tooltip" data-placement="top" title="" data-original-title="Back to Top" aria-hidden="true"></i>
-        </div><!--/.scroll-Top-->
-    </div><!-- /.container-->
-
-</footer><!-- /.footer-copyright-->
-<!-- footer-copyright end -->
-
-<!-- footer-copyright start -->
-<footer  class="footer-copyright">
-    <div class="container">
-        <div class="footer-content">
-            <div class="row">
-
-                <div class="col-sm-3">
-                    <div class="single-footer-item">
-                        <div class="footer-logo">
-                            <a href="../index.html">
-                                E<span>-Tourism</span>
-                            </a>
-                            <p>
-                                best travel agency
-                            </p>
-                        </div>
-                    </div><!--/.single-footer-item-->
-                </div><!--/.col-->
-
-                <div class="col-sm-3">
-                    <div class="single-footer-item">
-                        <h2>link</h2>
-                        <div class="single-footer-txt">
-                            <p><a href="../index.html">home</a></p>
-                            <p><a href="./about-us.html">about us</a></p>
-                            <p><a href="#">destination</a></p>
-                            <p><a href="#">spacial packages</a></p>
-                            <p><a href="#">special offers</a></p>
-                            <p><a href="#">blog</a></p>
-                            <p><a href="./contact_us.html">contact us</a></p>
-                            <p><a href="#">FAQ</a></p>
-                        </div><!--/.single-footer-txt-->
-                    </div><!--/.single-footer-item-->
-
-                </div><!--/.col-->
-
-                <div class="col-sm-3">
-                    <div class="single-footer-item">
-                        <h2>popular destination</h2>
-                        <div class="single-footer-txt">
-                            <p><a href="./sajek_details.html">Sajek</a></p>
-                            <p><a href="#">Bandarban</a></p>
-                            <p><a href="#">Rangamati</a></p>
-                            <p><a href="#">Cox's Bazar</a></p>
-                            <p><a href="#">Saintmartin</a></p>
                         </div><!--/.single-footer-txt-->
                     </div><!--/.single-footer-item-->
                 </div><!--/.col-->
