--- a/pages/all-events.html
+++ b/pages/all-events.html
@@ -204,9 +204,7 @@
                                         </p>
                                     </div><!--/.packages-review-->
                                     <div class="about-btn">
-                                        <button  class="about-view packages-btn" onclick="book()">
-                                            book now
-                                        </button>
+                                        <a href="./payment.html" target="_blank" style="padding:10px; background-color: #00D8D6; color: white;">Book</a>
                                     </div><!--/.about-btn-->
                                 </div><!--/.single-package-item-txt-->
                             </div><!--/.single-package-item-->
@@ -247,9 +245,7 @@
                                         </p>
                                     </div><!--/.packages-review-->
                                     <div class="about-btn">
-                                        <button  class="about-view packages-btn" onclick="book()">
-                                            book now
-                                        </button>
+                                        <a href="./payment.html" target="_blank" style="padding:10px; background-color: #00D8D6; color: white;">Book</a>
                                     </div><!--/.about-btn-->
                                 </div><!--/.single-package-item-txt-->
                             </div><!--/.single-package-item-->
@@ -290,9 +286,7 @@
                                         </p>
                                     </div><!--/.packages-review-->
                                     <div class="about-btn">
-                                        <button  class="about-view packages-btn" onclick="book()">
-                                            book now
-                                        </button>
+                                        <a href="./payment.html" target="_blank" style="padding:10px; background-color: #00D8D6; color: white;">Book</a>
                                     </div><!--/.about-btn-->
                                 </div><!--/.single-package-item-txt-->
                             </div><!--/.single-package-item-->
